Only pre downloading browsers

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -23,13 +23,24 @@ RUN apt install -y \
 	php-curl \
 	npm
 
-RUN npm i -g @playwright/test
-RUN npx playwright install
+RUN apt install -y --no-install-recommends git openssh-client
+RUN npm install -g yarn
+
+RUN rm -rf /var/lib/apt/lists/*
+RUN adduser pwuser
+
+ENV PLAYWRIGHT_BROWSERS_PATH=/playwright-browsers
+
+RUN mkdir /playwright-browsers && \
+    mkdir /playwright-browser-downloader && \
+    cd /playwright-browser-downloader && \
+    npm init -y && npm i @playwright/test && \
+    npx playwright install --with-deps && \
+    rm -rf playwright-browser-downloader && \
+    chmod -R 777 /playwright-browsers
 
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
 RUN php -r "if (hash_file('sha384', 'composer-setup.php') === '906a84df04cea2aa72f40b5f787e49f22d4c2f19492ac310e8cba5b96ac8b64115ac402c8cd292b8a03482574915d1a8') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
 RUN php composer-setup.php
 RUN php -r "unlink('composer-setup.php');"
 RUN mv composer.phar /usr/local/bin/composer
-
-WORKDIR /app-dir
