--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -39,7 +39,8 @@ RUN mkdir /playwright-browsers && \
     npm init -y && npm i @playwright/test && \
     npx playwright install --with-deps && \
     rm -rf playwright-browser-downloader && \
-    chmod -R 777 /playwright-browsers
+    chmod -R 777 /playwright-browsers && \
+    npx playwright install-deps
 
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
 RUN php -r "if (hash_file('sha384', 'composer-setup.php') === '906a84df04cea2aa72f40b5f787e49f22d4c2f19492ac310e8cba5b96ac8b64115ac402c8cd292b8a03482574915d1a8') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;"
